--- a/planetary_diversity/localisation/braz_por/planetarydiversity_planet_classes_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_planet_classes_l_braz_por.yml
@@ -287,6 +287,12 @@
  mod_pc_pd_sandstone_habitability: "Habitabilidade Savânica"
  trait_pc_pd_sandstone_preference: "Preferência Savânica"
  trait_pc_pd_sandstone_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_turquoise: "Turquoise World"
+ pc_pd_turquoise_desc: "This subtropical grassland planet is studded with vast deposits of turquoise gemstones, which are found almost everywhere on its surface."
+ pc_pd_turquoise_adj: "turquoise"
+ mod_pc_pd_turquoise_habitability: "Savannah Habitability"
+ trait_pc_pd_turquoise_preference: "Savannah Preference"
+ trait_pc_pd_turquoise_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_supercontinent: "Mundo Supercontinental"
  pc_pd_supercontinent_desc: "Mundo rochoso de pastagens e desertos com uma atmosfera de nitrogênio-oxigênio, as placas tectônicas deste planeta estão atualmente no estado de um supercontinente. As áreas costeiras imediatas são exuberantes, mas grande parte do terreno interior é constituído por pastagens que lentamente se transformam em grandes desertos áridos."
  pc_pd_supercontinent_adj: "supercontinental"
