--- a/planetary_diversity/localisation/braz_por/planetarydiversity_planet_modifiers_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_planet_modifiers_l_braz_por.yml
@@ -120,6 +120,8 @@
  pd_aspen_desc: "Seco e rochoso com uma atmosfera de nitrogênio e oxigênio, este mundo possui bosques de árvores em meio a pastagens. Uma pequena mas estável hidrosfera de riachos sustenta as florestas e arbustos densos."
  pd_sandstone: "Mundo Arenito"
  pd_sandstone_desc: "Este planeta possui vastas pastagens e formações de arenito esculpidas pelo vento. A sua hidrosfera suporta gramíneas resilientes adaptadas para prosperar neste ambiente."
+ pd_turquoise: "$pc_pd_turquoise$"
+ pd_turquoise_desc: "This subtropical grassland planet is studded with vast deposits of turquoise gemstones, which are found almost everywhere on its surface."
  pd_supercontinent: "Mundo Supercontinental"
  pd_supercontinent_desc: "Este planeta possui atualmente um supercontinente devido às suas placas tectônicas. As áreas costeiras são exuberantes, enquanto o terreno interior transita de pastagens para grandes desertos áridos."
  pd_sinkhole: "Mundo Sumidouro"
