--- a/planetary_diversity/localisation/english/planetarydiversity_planet_classes_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_planet_classes_l_english.yml
@@ -299,6 +299,12 @@
  mod_pc_pd_sandstone_habitability: "Savanna Habitability"
  trait_pc_pd_sandstone_preference: "Savanna Preference"
  trait_pc_pd_sandstone_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_turquoise: "Turquoise World"
+ pc_pd_turquoise_desc: "This subtropical grassland planet is studded with vast deposits of turquoise gemstones, which are found almost everywhere on its surface."
+ pc_pd_turquoise_adj: "turquoise"
+ mod_pc_pd_turquoise_habitability: "Savannah Habitability"
+ trait_pc_pd_turquoise_preference: "Savannah Preference"
+ trait_pc_pd_turquoise_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_supercontinent: "Supercontinent World"
  pc_pd_supercontinent_desc: "Rocky world of grasslands and deserts with a nitrogen-oxygen atmosphere, this planet's plate tectonics is currently in the state of a supercontinent. Immediate coastal areas are lush, but much of the inland terrain is grasslands which slowly turn into large arid deserts."
  pc_pd_supercontinent_adj: "supercontinental"
