--- a/planetary_diversity/localisation/french/planetarydiversity_planet_classes_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_planet_classes_l_french.yml
@@ -300,6 +300,12 @@ pc_pd_sandstone_adj: "venteux"
 mod_pc_pd_sandstone_habitability: "Habitabilité Savane"
 trait_pc_pd_sandstone_preference: "Préférence Savane"
 trait_pc_pd_sandstone_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_turquoise: "Turquoise World"
+ pc_pd_turquoise_desc: "This subtropical grassland planet is studded with vast deposits of turquoise gemstones, which are found almost everywhere on its surface."
+ pc_pd_turquoise_adj: "turquoise"
+ mod_pc_pd_turquoise_habitability: "Savannah Habitability"
+ trait_pc_pd_turquoise_preference: "Savannah Preference"
+ trait_pc_pd_turquoise_preference_desc: "$trait_pc_arctic_preference_desc$"
 pc_pd_supercontinent: "Monde Supercontinent"
 pc_pd_supercontinent_desc: "Monde rocheux de prairies et de déserts avec une atmosphère à base d'azote et d'oxygène, les plaques tectoniques de cette planète se trouvent actuellement dans l'état d'un supercontinent. Les zones côtières immédiates sont luxuriantes, mais une grande partie du terrain intérieur est constituée de prairies qui se transforment lentement en grands déserts arides."
 pc_pd_supercontinent_adj: "supercontinental"
