--- a/planetary_diversity/localisation/french/planetarydiversity_planet_modifiers_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_planet_modifiers_l_french.yml
@@ -107,24 +107,26 @@ pd_primal: "Monde Primal"
 pd_primal_desc: "L'activité volcanique de ce jeune monde a ralenti, donnant naissance à une flore et une faune de plus en plus complexes, ce qui a contribué à créer une atmosphère respirable et à stabiliser l'hydrosphère."
 
 #Savannah
-pd_savannah: "Monde de Savanes"
-pd_savannah_desc: "La petite hydrosphère permet de courtes saisons humides, mais à part quelques herbes omniprésentes, la végétation est principalement concentrée autour des oasis peu profondes."
-pd_steppe: "Monde de Steppes"
-pd_steppe_desc: "Cette prairie semi-aride est composée de collines ondulantes et de plaines couvrant une grande partie de la surface. Bien que presque aucun arbre ne pousse, les précipitations peuvent soutenir des arbustes et des herbes."
-pd_prairie: "Monde de Prairies"
-pd_prairie_desc: "Hydrosphère saisonnière avec un seul grand massif terrestre, de grands mers intérieurs, de courtes étés secs et des hivers froids et rigoureux."
-pd_veld: "Monde de Velds"
-pd_veld_desc: "Ce paysage subtropical est couvert de broussailles et de savanes ouvertes dans un monde sec et rocheux avec une atmosphère d'azote et d'oxygène. Ce monde a des hivers doux et des étés longs et chauds."
-pd_semi_arid: "Monde Semi-Aride"
-pd_semi_arid_desc: "L'hydrosphère permet une courte mais significative saison des pluies. Cependant, à part quelques types d'herbes omniprésentes, la végétation est principalement concentrée autour des vallées protégées et près des grands plans d'eau."
-pd_aspen: "Monde de Peuplier"
-pd_aspen_desc: "Un monde sec et rocheux avec une atmosphère d'azote et d'oxygène composé de bosquets d'arbres entrecoupés de prairies. Une hydrosphère petite mais stable de ruisseaux et de vallées fluviales soutient les forêts et les buissons denses."
-pd_sandstone: "$pc_pd_sandstone$"
-pd_sandstone_desc: "$pc_pd_sandstone_desc$"
-pd_supercontinent: "Monde Supercontinent"
-pd_supercontinent_desc: "Les plaques tectoniques de cette planète se trouvent actuellement dans un état de supercontinent. Les zones côtières immédiates sont luxuriantes, mais une grande partie du terrain intérieur est composée de prairies qui se transforment lentement en grands déserts arides."
-pd_sinkhole: "Monde de Gouffres"
-pd_sinkhole_desc: "Bien que la surface ait une petite hydrosphère stable, un océan souterrain planétaire se cache en dessous, créant des puits d'effondrement géants parsemant la surface de ce monde."
+ pd_savannah: "Monde de Savanes"
+ pd_savannah_desc: "La petite hydrosphère permet de courtes saisons humides, mais à part quelques herbes omniprésentes, la végétation est principalement concentrée autour des oasis peu profondes."
+ pd_steppe: "Monde de Steppes"
+ pd_steppe_desc: "Cette prairie semi-aride est composée de collines ondulantes et de plaines couvrant une grande partie de la surface. Bien que presque aucun arbre ne pousse, les précipitations peuvent soutenir des arbustes et des herbes."
+ pd_prairie: "Monde de Prairies"
+ pd_prairie_desc: "Hydrosphère saisonnière avec un seul grand massif terrestre, de grands mers intérieurs, de courtes étés secs et des hivers froids et rigoureux."
+ pd_veld: "Monde de Velds"
+ pd_veld_desc: "Ce paysage subtropical est couvert de broussailles et de savanes ouvertes dans un monde sec et rocheux avec une atmosphère d'azote et d'oxygène. Ce monde a des hivers doux et des étés longs et chauds."
+ pd_semi_arid: "Monde Semi-Aride"
+ pd_semi_arid_desc: "L'hydrosphère permet une courte mais significative saison des pluies. Cependant, à part quelques types d'herbes omniprésentes, la végétation est principalement concentrée autour des vallées protégées et près des grands plans d'eau."
+ pd_aspen: "Monde de Peuplier"
+ pd_aspen_desc: "Un monde sec et rocheux avec une atmosphère d'azote et d'oxygène composé de bosquets d'arbres entrecoupés de prairies. Une hydrosphère petite mais stable de ruisseaux et de vallées fluviales soutient les forêts et les buissons denses."
+ pd_sandstone: "$pc_pd_sandstone$"
+ pd_sandstone_desc: "$pc_pd_sandstone_desc$"
+ pd_turquoise: "$pc_pd_turquoise$"
+ pd_turquoise_desc: "This subtropical grassland planet is studded with vast deposits of turquoise gemstones, which are found almost everywhere on its surface."
+ pd_supercontinent: "Monde Supercontinent"
+ pd_supercontinent_desc: "Les plaques tectoniques de cette planète se trouvent actuellement dans un état de supercontinent. Les zones côtières immédiates sont luxuriantes, mais une grande partie du terrain intérieur est composée de prairies qui se transforment lentement en grands déserts arides."
+ pd_sinkhole: "Monde de Gouffres"
+ pd_sinkhole_desc: "Bien que la surface ait une petite hydrosphère stable, un océan souterrain planétaire se cache en dessous, créant des puits d'effondrement géants parsemant la surface de ce monde."
 
 #Arctic
 pd_arctic: "Monde Arctique"
