--- a/planetary_diversity/localisation/korean/planetarydiversity_planet_classes_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_planet_classes_l_korean.yml
@@ -299,6 +299,12 @@
  mod_pc_pd_sandstone_habitability: "사바나 행성 거주 적합도"
  trait_pc_pd_sandstone_preference: "사바나 행성 선호"
  trait_pc_pd_sandstone_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_turquoise: "Turquoise World"
+ pc_pd_turquoise_desc: "This subtropical grassland planet is studded with vast deposits of turquoise gemstones, which are found almost everywhere on its surface."
+ pc_pd_turquoise_adj: "turquoise"
+ mod_pc_pd_turquoise_habitability: "Savannah Habitability"
+ trait_pc_pd_turquoise_preference: "Savannah Preference"
+ trait_pc_pd_turquoise_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_supercontinent: "초대륙 행성"
  pc_pd_supercontinent_desc: "대기가 질소와 산소로 조성되었으며 초원과 사막으로 구성된 암석형 행성입니다. 이 행성의 판구조학은 현재 초대륙의 상태에 있습니다. 가까운 해안 지역은 울창하지만 내륙 지형의 대부분은 초원이며, 서서히 건조한 사막으로 변해가고 있습니다."
  pc_pd_supercontinent_adj: "초대륙의"
