--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
@@ -299,6 +299,12 @@
  mod_pc_pd_sandstone_habitability: "Możliwość zamieszkania świata sawannowego"
  trait_pc_pd_sandstone_preference: "Preferowany teren: sawannowy"
  trait_pc_pd_sandstone_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_turquoise: "Turquoise World"
+ pc_pd_turquoise_desc: "This subtropical grassland planet is studded with vast deposits of turquoise gemstones, which are found almost everywhere on its surface."
+ pc_pd_turquoise_adj: "turquoise"
+ mod_pc_pd_turquoise_habitability: "Savannah Habitability"
+ trait_pc_pd_turquoise_preference: "Savannah Preference"
+ trait_pc_pd_turquoise_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_supercontinent: "Świat superkontynentalny"
  pc_pd_supercontinent_desc: "Skalisty świat łąk i pustyń z atmosferą azotowo-tlenową, tektonika płyt tej planety znajduje się obecnie w stanie superkontynentu. Bezpośrednie obszary przybrzeżne są bujne, ale większość terenu śródlądowego to łąki, które powoli zamieniają się w duże, jałowe pustynie."
  pc_pd_supercontinent_adj: "superkontynentalny"
