--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_modifiers_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_modifiers_l_polish.yml
@@ -120,6 +120,8 @@
  pd_aspen_desc: "Ten suchy i skalisty świat z atmosferą azotowo-tlenową ma gaje drzewne pośród łąk. Niewielką, ale stabilną hydrosferę strumieni wspierają lasy i gęste zarośla."
  pd_sandstone: "$pc_pd_sandstone$"
  pd_sandstone_desc: "Na tej planecie znajdują się rozległe łąki i formacje piaskowca wyrzeźbione przez wiatr. Jego hydrosfera wspiera odporne trawy przystosowane do rozwoju w tym środowisku."
+ pd_turquoise: "$pc_pd_turquoise$"
+ pd_turquoise_desc: "This subtropical grassland planet is studded with vast deposits of turquoise gemstones, which are found almost everywhere on its surface."
  pd_supercontinent: "Świat superkontynentalny"
  pd_supercontinent_desc: "Ta planeta ma obecnie superkontynent ze względu na tektonikę płyt. Obszary przybrzeżne są bujne, podczas gdy teren śródlądowy przechodzi z łąk w duże, jałowe pustynie."
  pd_sinkhole: "Świat zapadliskowy"
