--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_engine_events_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_engine_events_l_simp_chinese.yml
@@ -94,6 +94,7 @@
  pdengine.21.algae: "$pc_pd_algae$"
  pdengine.21.aerial: "$pc_pd_aerial$"
  pdengine.21.sandstone: "$pc_pd_sandstone$"
+ pdengine.21.turquoise: "$pc_pd_turquoise$"
  pdengine.21.lilypad: "$pc_pd_lilypad$"
  pdengine.21.blossom: "$pc_pd_blossom$"
  pdengine.96.name: "盖亚星球改造完成"
