--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
@@ -638,6 +638,12 @@
  mod_pc_pd_sandstone_habitability: "草原星球宜居性"
  trait_pc_pd_sandstone_preference: "草原星球偏好"
  trait_pc_pd_sandstone_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_turquoise: "Turquoise World"
+ pc_pd_turquoise_desc: "This subtropical grassland planet is studded with vast deposits of turquoise gemstones, which are found almost everywhere on its surface."
+ pc_pd_turquoise_adj: "turquoise"
+ mod_pc_pd_turquoise_habitability: "Savannah Habitability"
+ trait_pc_pd_turquoise_preference: "Savannah Preference"
+ trait_pc_pd_turquoise_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_lilypad: "睡莲星球"
  pc_pd_lilypad_desc: "这类草木葱郁的岩石星球被致密的氮氧大气包裹着，孕育出温暖的浅海以及生意盎然的丰富生命。水生植物强韧的叶片构成了地表的次级生态系统。"
  pc_pd_lilypad_adj: "漂浮"
