--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
@@ -248,6 +248,8 @@
  pd_aerial_desc: "独特的植物孕育出巨大的种荚，如云般飘荡在植被繁茂的陆地上空。"
  pd_sandstone: "砂岩世界"
  pd_sandstone_desc: "这里有着广袤的草原和风蚀砂岩构造。水圈维系着顽强的草本植物，后者已然适应这里的环境。"
+ pd_turquoise: "$pc_pd_turquoise$"
+ pd_turquoise_desc: "This subtropical grassland planet is studded with vast deposits of turquoise gemstones, which are found almost everywhere on its surface."
  pd_blossom: "花簇世界"
  pd_blossom_desc: "丰沃的草原上点缀着怒放的花卉，这番壮丽之景在轨道上也能看得一清二楚。"
  pd_lilypad: "睡莲世界"
