--- a/planetary_diversity_ascension_worlds/localisation/braz_por/planetarydiversity_aw_necro_l_braz_por.yml
+++ b/planetary_diversity_ascension_worlds/localisation/braz_por/planetarydiversity_aw_necro_l_braz_por.yml
@@ -86,8 +86,8 @@
  MESSAGE_DESC_FOR_PLANET_KILLER_PD_NECRO_RAY: "was subjected to a necrotic transformation by"
  pd_necro_ray.02.name: "Planet Necromancy"
  pd_necro_ray.02.desc: "As the column of nanobots descending from the [FromFrom.GetName] dissipates, the surface of [From.GetName] is wholly transformed. Now there is only a Necropolis."
- pd_necro_ray.02.tooltip: "The planet becomes an §Y$pc_pd_necro$§!.\nAll Robot Pops will be destoryed and biological pops will gain the §Y$trait_zombie$§!."
- is_not_necro: "§R$TRIGGER_FAIL$Target is already an §Y$pc_pd_necro$§!§!"
+ pd_necro_ray.02.tooltip: "The planet becomes an §Y$pd_aw_necro_planet$§!.\nAll Robot Pops will be destoryed and biological pops will gain the §Y$trait_zombie$§!."
+ is_not_necro: "§R$TRIGGER_FAIL$Target is already an §Y$pd_aw_necro_planet$§!§!"
  will_purge_robots_and_zombie: "§RRobotic Pops will be destroyed and biological pops will gain the §Y$trait_zombie$§!§!"
  opinion_pd_necro_a_world: "Necromanced a World"
  opinion_pd_necro_my_world: "Necromanced our World"
