--- a/planetary_diversity_ascension_worlds/localisation/korean/planetarydiversity_aw_necro_l_korean.yml
+++ b/planetary_diversity_ascension_worlds/localisation/korean/planetarydiversity_aw_necro_l_korean.yml
@@ -56,7 +56,7 @@
  pd_aw_necro_city_planet_tooltip: "[GetAdministratorPluralWithIcon]으로 인한 £unity£ $unity$: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$ §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ §R10%§!"
  pd_necro_planet: "네크로폴리스"
  pd_necro_planet_tooltip: "§G건설 가능§!: £district£ $district_pd_aw_necro_plural$\n§R건설 불가§!: £district£ $district_farming_plural$\n[GetAdministratorPluralWithIcon]으로 인한 £unity£ $unity$: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$ §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ §R10%§!"
- pd_necro_planet_desc: "이 행성은 거대한 신전이며, 그 표면은 영원한 의미의 속삭임으로 메아리칩니다." 
+ pd_necro_planet_desc: "이 행성은 거대한 신전이며, 그 표면은 영원한 의미의 속삭임으로 메아리칩니다."
 
 #Acension Perk
  ap_pd_necro_worlds: "네크로폴리스 행성"
@@ -86,8 +86,8 @@
  MESSAGE_DESC_FOR_PLANET_KILLER_PD_NECRO_RAY: "에 의해 사령술 변형을 겪었습니다."
  pd_necro_ray.02.name: "행성 사령술"
  pd_necro_ray.02.desc: "[FromFrom.GetName]에서 내려오는 나노봇의 기둥이 사라지면서 [From.GetName]의 표면이 완전히 변형됩니다. 이제 네크로폴리스만 남았습니다."
- pd_necro_ray.02.tooltip: "행성은 §Y$pc_pd_necro$§!이 됩니다.\n모든 로봇과 기계 팝이 파괴되고 모든 생물학적 팝은 §Y$trait_zombie$§! 특성을 얻습니다." 
- is_not_necro: "§R$TRIGGER_FAIL$대상은 이미 §Y$pc_pd_necro$§!§!입니다."
+ pd_necro_ray.02.tooltip: "행성은 §Y$pd_aw_necro_planet$§!이 됩니다.\n모든 로봇과 기계 팝이 파괴되고 모든 생물학적 팝은 §Y$trait_zombie$§! 특성을 얻습니다."
+ is_not_necro: "§R$TRIGGER_FAIL$대상은 이미 §Y$pd_aw_necro_planet$§!§!입니다."
  will_purge_robots_and_zombie: "§R모든 로봇과 기계 팝이 파괴되고 모든 생물학적 팝은 §Y$trait_zombie$§!§! 특성을 얻습니다."
  opinion_pd_necro_a_world: "행성에 사령술을 사용함."
  opinion_pd_necro_my_world: "우리 행성에 사령술을 사용함."
