--- a/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_necro_l_simp_chinese.yml
+++ b/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_necro_l_simp_chinese.yml
@@ -71,8 +71,8 @@
  MESSAGE_DESC_FOR_PLANET_KILLER_PD_NECRO_RAY: "被彻底灭活"
  pd_necro_ray.02.name: "行星灭活"
  pd_necro_ray.02.desc: "随着从[FromFrom.GetName]降下的纳米机器人光柱逐渐消散，[From.GetName]的表面完全改变了。现在这里只剩一座坟墓。"
- pd_necro_ray.02.tooltip: "星球变为§Y$pc_pd_necro$§!。\n所有机器人人口都会摧毁，生物人口会获得§Y$trait_zombie$§!特质。"
- is_not_necro: "§R$TRIGGER_FAIL$目标已经是§Y$pc_pd_necro$§!了§!"
+ pd_necro_ray.02.tooltip: "星球变为§Y$pd_aw_necro_planet$§!。\n所有机器人人口都会摧毁，生物人口会获得§Y$trait_zombie$§!特质。"
+ is_not_necro: "§R$TRIGGER_FAIL$目标已经是§Y$pd_aw_necro_planet$§!了§!"
  will_purge_robots_and_zombie: "§R机器人人口都会摧毁，生物人口会获得§Y$trait_zombie$§!特质§!"
  opinion_pd_necro_a_world: "灭活了一个星球"
  opinion_pd_necro_my_world: "灭活了我们的星球"
