--- a/planetary_diversity_uniques/localisation/pd_uniques_l_english.yml
+++ b/planetary_diversity_uniques/localisation/pd_uniques_l_english.yml
@@ -20,9 +20,9 @@
  d_pd_floating_mining_operation: "Eludium Stirp-mine Operation"
  d_pd_floating_mining_operation_desc: "The planet's ecosystem, which had previously blocked large-scale mining operations, has been cleared to fully exploit the rare Eludium ore."
  decision_d_pd_the_great_knot_mining: "$d_pd_floating_the_great_knot$ Mining Operation"
- decision_d_pd_the_great_knot_mining_desc: "The area known as $d_pd_floating_the_great_knot will be developed into a large-scale Eludium mining operation."
+ decision_d_pd_the_great_knot_mining_desc: "The area known as $d_pd_floating_the_great_knot$ will be developed into a large-scale Eludium mining operation."
  decision_d_pd_whispering_glades_mining: "$d_pd_floating_whispering_glades$ Mining Operation"
- decision_d_pd_whispering_glades_mining_desc: "The area known as the $d_pd_floating_whispering_glades will be developed into a large-scale Eludium mining operation."
+ decision_d_pd_whispering_glades_mining_desc: "The area known as the $d_pd_floating_whispering_glades$ will be developed into a large-scale Eludium mining operation."
  decision_d_pd_skyfall_islands_mining: "$d_pd_floating_skyfall_islands$ Mining Operation"
  decision_d_pd_skyfall_islands_mining_desc: "The area known as the $d_pd_floating_skyfall_islands$ will be developed into a large-scale Eludium mining operation."
  tech_eludium_research:1 "Eludium Refining"
