--- a/planetary_diversity/localisation/french/planetarydiversity_engine_events_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_engine_events_l_french.yml
@@ -56,6 +56,7 @@
  pdengine.21.semi_arid: "$pc_pd_semi_arid$"
  pdengine.21.aspen: "$pc_pd_aspen$"
  pdengine.21.sandstone: "$pc_pd_sandstone$"
+ pdengine.21.turquoise: "$pc_pd_turquoise$"
  pdengine.21.prairie: "$pc_pd_prairie$"
  pdengine.21.supercontinent: "$pc_pd_supercontinent$"
  pdengine.21.sinkhole: "$pc_pd_sinkhole$"
