--- a/planetary_diversity/localisation/japanese/planetarydiversity_planet_modifiers_l_japanese.yml
+++ b/planetary_diversity/localisation/japanese/planetarydiversity_planet_modifiers_l_japanese.yml
@@ -120,6 +120,8 @@
  pd_aspen_desc: "Dry and rocky with a nitrogen-oxygen atmosphere, this world has tree groves amid grasslands. A small but stable hydrosphere of streams supports the forests and dense shrubbery."
  pd_sandstone: "$pc_pd_sandstone$"
  pd_sandstone_desc: "This planet boasts vast grasslands and wind-carved sandstone formations. Its hydrosphere supports resilient grasses adapted to thrive in this environment."
+ pd_turquoise: "$pc_pd_turquoise$"
+ pd_turquoise_desc: "This subtropical grassland planet is studded with vast deposits of turquoise gemstones, which are found almost everywhere on its surface."
  pd_supercontinent: "Supercontinent World"
  pd_supercontinent_desc: "This planet currently has a supercontinent due to its plate tectonics. Coastal areas are lush, while inland terrain transitions from grasslands to large arid deserts."
  pd_sinkhole: "Sinkhole World"
