--- a/planetary_diversity/localisation/korean/planetarydiversity_planet_modifiers_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_planet_modifiers_l_korean.yml
@@ -120,6 +120,8 @@
  pd_aspen_desc: "질소-산소 대기의 건조하고 바위가 많은 이 행성에는 초원 사이에 나무 숲이 있습니다. 작지만 안정적으로 흐르는 하천이 숲과 울창한 관목을 지탱하고 있습니다."
  pd_sandstone: "사암 행성"
  pd_sandstone_desc: "이 행성은 광활한 초원과 바람에 깎인 사암 지형을 자랑합니다. 이 행성의 수권은 이러한 환경에서 잘 자라도록 적응한 탄력적인 풀을 지원합니다."
+ pd_turquoise: "$pc_pd_turquoise$"
+ pd_turquoise_desc: "This subtropical grassland planet is studded with vast deposits of turquoise gemstones, which are found almost everywhere on its surface."
  pd_supercontinent: "초대륙 행성"
  pd_supercontinent_desc: "이 행성은 현재 판구조론으로 인해 초대륙을 형성하고 있습니다. 해안 지역은 울창한 반면 내륙 지형은 초원에서 거대한 건조 사막으로 전환됩니다."
  pd_sinkhole: "싱크홀 행성"
